Fix layout issue

--- a/src/AppViewLite.Web/wwwroot/app.css
+++ b/src/AppViewLite.Web/wwwroot/app.css
@@ -422,7 +422,6 @@ ul {
 }
 
 .post-reposted-by {
-    margin-top: 2px;
     margin-bottom: 2px;
     color: gray;
     font-size: 10pt;
